@@ -669,7 +669,8 @@ print.drcfit <- function(x, ...)
 }
 
 plot.drcfit <- function(x, items, 
-                plot.type = c("dose_fitted", "dose_residuals","fitted_residuals"), ...)
+                plot.type = c("dose_fitted", "dose_residuals","fitted_residuals"), 
+                x_pseudo_log_transfo = FALSE, ...)
 {
   if (!inherits(x, "drcfit"))
     stop("Use only with 'drcfit' objects")
@@ -696,7 +697,8 @@ plot.drcfit <- function(x, items,
                 data = x$omicdata$data, 
                 data.mean = x$omicdata$data.mean, 
                 npts = 500,
-                plot.type = plot.type) 
+                plot.type = plot.type, 
+                x_pseudo_log_transfo = x_pseudo_log_transfo) 
   
 }
 
